packages/tests/flow/snapshot.txt
Error: ../all.test.js:2651
            v----
2651:       <Node
2652:         shader={shaders.helloTexture}
2653:         uniformsOptions={{ t: { interpolation: "nope" } }}
2654:         uniforms={{ t: <JustBlue blue={1} /> }}
2655:       />
            -^ props of React element `Node`
2653:         uniformsOptions={{ t: { interpolation: "nope" } }}
                                                     ^^^^^^ string. This type is incompatible with
 65:   interpolation: Interpolation,
                      ^^^^^^^^^^^^^ string enum. See: ../node_modules/gl-react/lib/Node.js.flow:65

Error: ../all.test.js:2663
            v----
2663:       <Node
2664:         shader={shaders.helloTexture}
2665:         uniformsOptions={{ t: { wrap: "nope" } }}
2666:         uniforms={{ t: <JustBlue blue={1} /> }}
2667:       />
            -^ props of React element `Node`
2665:         uniformsOptions={{ t: { wrap: "nope" } }}
                                            ^^^^^^ string. This type is incompatible with
 66:   wrap: [WrapMode, WrapMode] | WrapMode
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ union: tuple type | WrapMode. See: ../node_modules/gl-react/lib/Node.js.flow:66
  Member 1:
   66:   wrap: [WrapMode, WrapMode] | WrapMode
               ^^^^^^^^^^^^^^^^^^^^ tuple type. See: ../node_modules/gl-react/lib/Node.js.flow:66
  Error:
  2665:         uniformsOptions={{ t: { wrap: "nope" } }}
                                              ^^^^^^ string. This type is incompatible with
   66:   wrap: [WrapMode, WrapMode] | WrapMode
               ^^^^^^^^^^^^^^^^^^^^ tuple type. See: ../node_modules/gl-react/lib/Node.js.flow:66
  Member 2:
   66:   wrap: [WrapMode, WrapMode] | WrapMode
                                      ^^^^^^^^ WrapMode. See: ../node_modules/gl-react/lib/Node.js.flow:66
  Error:
  2665:         uniformsOptions={{ t: { wrap: "nope" } }}
                                              ^^^^^^ string. This type is incompatible with
   66:   wrap: [WrapMode, WrapMode] | WrapMode
                                      ^^^^^^^^ string enum. See: ../node_modules/gl-react/lib/Node.js.flow:66

Error: ../all.test.js:2675
            v----
2675:       <Node
2676:         shader={shaders.helloTexture}
2677:         uniformsOptions={{ t: { wrap: ["nope", "nope"] } }}
2678:         uniforms={{ t: <JustBlue blue={1} /> }}
2679:       />
            -^ props of React element `Node`
2677:         uniformsOptions={{ t: { wrap: ["nope", "nope"] } }}
                                            ^^^^^^^^^^^^^^^^ array literal. This type is incompatible with
 66:   wrap: [WrapMode, WrapMode] | WrapMode
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ union: tuple type | WrapMode. See: ../node_modules/gl-react/lib/Node.js.flow:66
  Member 1:
   66:   wrap: [WrapMode, WrapMode] | WrapMode
               ^^^^^^^^^^^^^^^^^^^^ tuple type. See: ../node_modules/gl-react/lib/Node.js.flow:66
  Error:
  2677:         uniformsOptions={{ t: { wrap: ["nope", "nope"] } }}
                                               ^^^^^^ string. This type is incompatible with
   66:   wrap: [WrapMode, WrapMode] | WrapMode
                ^^^^^^^^ string enum. See: ../node_modules/gl-react/lib/Node.js.flow:66
  Member 2:
   66:   wrap: [WrapMode, WrapMode] | WrapMode
                                      ^^^^^^^^ WrapMode. See: ../node_modules/gl-react/lib/Node.js.flow:66
  Error:
  2677:         uniformsOptions={{ t: { wrap: ["nope", "nope"] } }}
                                              ^^^^^^^^^^^^^^^^ array literal. This type is incompatible with
   66:   wrap: [WrapMode, WrapMode] | WrapMode
                                      ^^^^^^^^ string enum. See: ../node_modules/gl-react/lib/Node.js.flow:66

Error: ../all.test.js:2687
            v----
2687:       <Node
2688:         blendFunc="nope"
2689:         shader={shaders.helloTexture}
2690:         uniforms={{ t: <JustBlue blue={1} /> }}
2691:       />
            -^ props of React element `Node`
2688:         blendFunc="nope"
                        ^^^^^^ string. Inexact type is incompatible with exact type
177:   blendFunc: BlendFuncSrcDst,
                  ^^^^^^^^^^^^^^^ exact type: object type. See: ../node_modules/gl-react/lib/Node.js.flow:177

Error: incorrect.js:19
 19: <Node />;
     ^^^^^^^^ React element `Node`
392:   props: Props;
              ^^^^^ property `shader`. Property not found in. See: ../node_modules/gl-react/lib/Node.js.flow:392
 19: <Node />;
     ^^^^^^^^ props of React element `Node`

Error: incorrect.js:25
 25: <Node nope />;
     ^^^^^^^^^^^^^ React element `Node`
 25: <Node nope />;
     ^^^^^^^^^^^^^ property `nope`. Property not found in
392:   props: Props;
              ^^^^^ object type. See: ../node_modules/gl-react/lib/Node.js.flow:392

Error: incorrect.js:25
 25: <Node nope />;
     ^^^^^^^^^^^^^ React element `Node`
392:   props: Props;
              ^^^^^ property `shader`. Property not found in. See: ../node_modules/gl-react/lib/Node.js.flow:392
 25: <Node nope />;
     ^^^^^^^^^^^^^ props of React element `Node`

Error: incorrect.js:27
 27: <Bus nope />;
     ^^^^^^^^^^^^ React element `Bus`
 27: <Bus nope />;
     ^^^^^^^^^^^^ property `nope`. Property not found in
 45: export default class Bus extends Component<{ index: number }, Props, void> {
                                                                   ^^^^^ object type. See: ../node_modules/gl-react/lib/Bus.js.flow:45

Error: incorrect.js:29
                     v---------------
 29: const shaders = Shaders.create({
 30:   valid: {
 31:     frag: GLSL`...`
...:
 36: });
     -^ call of method `create`
 33:   a: null,
          ^^^^ null. Inexact type is incompatible with exact type
 45:   [key: string]: ShaderDefinition
                      ^^^^^^^^^^^^^^^^ exact type: object type. See: ../node_modules/gl-react/lib/Shaders.js.flow:45

Error: incorrect.js:29
                     v---------------
 29: const shaders = Shaders.create({
 30:   valid: {
 31:     frag: GLSL`...`
...:
 36: });
     -^ call of method `create`
 45:   [key: string]: ShaderDefinition
                      ^^^^^^^^^^^^^^^^ property `frag`. Property not found in. See: ../node_modules/gl-react/lib/Shaders.js.flow:45
 34:   b: {},
          ^^ object literal

Error: incorrect.js:35
 35:   c: { frag: true }
          ^^^^^^^^^^^^^^ object literal. This type is incompatible with
 45:   [key: string]: ShaderDefinition
                      ^^^^^^^^^^^^^^^^ object type. See: ../node_modules/gl-react/lib/Shaders.js.flow:45
  Property `frag` is incompatible:
     35:   c: { frag: true }
                      ^^^^ boolean. This type is incompatible with
     16:   frag: GLSLCode
                 ^^^^^^^^ string. See: ../node_modules/gl-react/lib/Shaders.js.flow:16

Error: incorrect.js:44
 44:       surface.nope();
                   ^^^^ property `nope`. Property not found in
 44:       surface.nope();
           ^^^^^^^ ISurface

Error: incorrect.js:45
 45:       node.nope();
                ^^^^ property `nope`. Property not found in
 45:       node.nope();
           ^^^^ Node

Error: incorrect.js:51
 51:         <Bus ref="o" notexists>
             ^^^^^^^^^^^^^^^^^^^^^^^ React element `Bus`
 51:         <Bus ref="o" notexists>
             ^^^^^^^^^^^^^^^^^^^^^^^ property `notexists`. Property not found in
 45: export default class Bus extends Component<{ index: number }, Props, void> {
                                                                   ^^^^^ object type. See: ../node_modules/gl-react/lib/Bus.js.flow:45

Error: incorrect.js:52
 52:           <Node />
               ^^^^^^^^ React element `Node`
392:   props: Props;
              ^^^^^ property `shader`. Property not found in. See: ../node_modules/gl-react/lib/Node.js.flow:392
 52:           <Node />
               ^^^^^^^^ props of React element `Node`

Error: incorrect.js:55
 55:           <Node shaders={shaders.valid} notexists />
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element `Node`
 55:           <Node shaders={shaders.valid} notexists />
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ property `notexists`. Property not found in
392:   props: Props;
              ^^^^^ object type. See: ../node_modules/gl-react/lib/Node.js.flow:392

Error: incorrect.js:55
 55:           <Node shaders={shaders.valid} notexists />
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element `Node`
 55:           <Node shaders={shaders.valid} notexists />
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ property `shaders`. Property not found in
392:   props: Props;
              ^^^^^ object type. See: ../node_modules/gl-react/lib/Node.js.flow:392

Error: incorrect.js:55
 55:           <Node shaders={shaders.valid} notexists />
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element `Node`
392:   props: Props;
              ^^^^^ property `shader`. Property not found in. See: ../node_modules/gl-react/lib/Node.js.flow:392
 55:           <Node shaders={shaders.valid} notexists />
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ props of React element `Node`

Error: incorrect.js:62
 62: connectSize();
     ^^^^^^^^^^^^^ function call
 62: connectSize();
     ^^^^^^^^^^^^^ undefined (too few arguments, expected default/rest parameters). This type is incompatible with
 19: const connectSize = (GLComponent: ReactClass<*>) =>
                                       ^^^^^^^^^^^^^ class type: C. See: ../node_modules/gl-react/lib/connectSize.js.flow:19

Error: incorrect.js:66
       v----
 66:   <Node
 67:     sync={1}
 68:     clear={42}
...:
 79:   />
       -^ React element `Node`
       v----
 66:   <Node
 67:     sync={1}
 68:     clear={42}
...:
 79:   />
       -^ property `preload`. Property not found in
392:   props: Props;
              ^^^^^ object type. See: ../node_modules/gl-react/lib/Node.js.flow:392

Error: incorrect.js:66
       v----
 66:   <Node
 67:     sync={1}
 68:     clear={42}
...:
 79:   />
       -^ React element `Node`
       v----
 66:   <Node
 67:     sync={1}
 68:     clear={42}
...:
 79:   />
       -^ property `visitor`. Property not found in
392:   props: Props;
              ^^^^^ object type. See: ../node_modules/gl-react/lib/Node.js.flow:392

Error: incorrect.js:66
       v----
 66:   <Node
 67:     sync={1}
 68:     clear={42}
...:
 79:   />
       -^ React element `Node`
 78:     shader={false}
                 ^^^^^ boolean. This type is incompatible with
160:   shader: ShaderIdentifier | ShaderDefinition,
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ union: ShaderIdentifier | ShaderDefinition. See: ../node_modules/gl-react/lib/Node.js.flow:160
  Member 1:
  160:   shader: ShaderIdentifier | ShaderDefinition,
                 ^^^^^^^^^^^^^^^^ ShaderIdentifier. See: ../node_modules/gl-react/lib/Node.js.flow:160
  Error:
   78:     shader={false}
                   ^^^^^ boolean. This type is incompatible with
  160:   shader: ShaderIdentifier | ShaderDefinition,
                 ^^^^^^^^^^^^^^^^ object type. See: ../node_modules/gl-react/lib/Node.js.flow:160
  Member 2:
  160:   shader: ShaderIdentifier | ShaderDefinition,
                                    ^^^^^^^^^^^^^^^^ ShaderDefinition. See: ../node_modules/gl-react/lib/Node.js.flow:160
  Error:
   78:     shader={false}
                   ^^^^^ boolean. Inexact type is incompatible with exact type
  160:   shader: ShaderIdentifier | ShaderDefinition,
                                    ^^^^^^^^^^^^^^^^ exact type: object type. See: ../node_modules/gl-react/lib/Node.js.flow:160

Error: incorrect.js:66
       v----
 66:   <Node
 67:     sync={1}
 68:     clear={42}
...:
 79:   />
       -^ props of React element `Node`. This type is incompatible with
392:   props: Props;
              ^^^^^ object type. See: ../node_modules/gl-react/lib/Node.js.flow:392
  Property `height` is incompatible:
     70:     height={false}
                     ^^^^^ boolean. This type is incompatible with
    165:   height?: number,
                    ^^^^^^ number. See: ../node_modules/gl-react/lib/Node.js.flow:165

Error: incorrect.js:66
       v----
 66:   <Node
 67:     sync={1}
 68:     clear={42}
...:
 79:   />
       -^ props of React element `Node`. This type is incompatible with
392:   props: Props;
              ^^^^^ object type. See: ../node_modules/gl-react/lib/Node.js.flow:392
  Property `sync` is incompatible:
     67:     sync={1}
                   ^ number. This type is incompatible with
    163:   sync?: boolean,
                  ^^^^^^^ boolean. See: ../node_modules/gl-react/lib/Node.js.flow:163

Error: incorrect.js:66
       v----
 66:   <Node
 67:     sync={1}
 68:     clear={42}
...:
 79:   />
       -^ props of React element `Node`. This type is incompatible with
392:   props: Props;
              ^^^^^ object type. See: ../node_modules/gl-react/lib/Node.js.flow:392
  Property `width` is incompatible:
     69:     width={false}
                    ^^^^^ boolean. This type is incompatible with
    164:   width?: number,
                   ^^^^^^ number. See: ../node_modules/gl-react/lib/Node.js.flow:164

Error: incorrect.js:66
       v----
 66:   <Node
 67:     sync={1}
 68:     clear={42}
...:
 79:   />
       -^ props of React element `Node`
 68:     clear={42}
                ^^ number. Inexact type is incompatible with exact type
178:   clear: ?Clear
               ^^^^^ exact type: object type. See: ../node_modules/gl-react/lib/Node.js.flow:178

Error: incorrect.js:66
       v----
 66:   <Node
 67:     sync={1}
 68:     clear={42}
...:
 79:   />
       -^ props of React element `Node`
                    v
 71:     blendFunc={{
 72:       src: "nope",
 73:       interpolation: "interpolation_nope",
 74:       wrap: "wrap_nope"
 75:     }}
         ^ property `interpolation`. Property not found in
177:   blendFunc: BlendFuncSrcDst,
                  ^^^^^^^^^^^^^^^ object type. See: ../node_modules/gl-react/lib/Node.js.flow:177

Error: incorrect.js:66
       v----
 66:   <Node
 67:     sync={1}
 68:     clear={42}
...:
 79:   />
       -^ props of React element `Node`
                    v
 71:     blendFunc={{
 72:       src: "nope",
 73:       interpolation: "interpolation_nope",
 74:       wrap: "wrap_nope"
 75:     }}
         ^ property `wrap`. Property not found in
177:   blendFunc: BlendFuncSrcDst,
                  ^^^^^^^^^^^^^^^ object type. See: ../node_modules/gl-react/lib/Node.js.flow:177

Error: incorrect.js:66
       v----
 66:   <Node
 67:     sync={1}
 68:     clear={42}
...:
 79:   />
       -^ props of React element `Node`
 72:       src: "nope",
                ^^^^^^ property `nope`. Property not found in
 95:   src: BlendFunc,
            ^^^^^^^^^ object literal. See: ../node_modules/gl-react/lib/Node.js.flow:95

Error: incorrect.js:66
       v----
 66:   <Node
 67:     sync={1}
 68:     clear={42}
...:
 79:   />
       -^ props of React element `Node`
177:   blendFunc: BlendFuncSrcDst,
                  ^^^^^^^^^^^^^^^ property `dst`. Property not found in. See: ../node_modules/gl-react/lib/Node.js.flow:177
                    v
 71:     blendFunc={{
 72:       src: "nope",
 73:       interpolation: "interpolation_nope",
 74:       wrap: "wrap_nope"
 75:     }}
         ^ object literal

Error: ../utils.js:42
 42:   expect(actual).toBeInstanceOf(Uint8Array);
       ^^^^^^ identifier `expect`. Could not resolve name


Found 31 errors
